--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -95,6 +95,14 @@ ion-label {
   font-weight: 400 !important;
 }
 
+.link {
+  z-index: 1500;
+}
+
+.icon-link {
+  margin: 0 !important;
+}
+
 .sliderPrimero {
   background-color: #eeeeee;
 }
