--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -1,9 +1,3 @@
-<!-- <ion-header>
-  <ion-toolbar>
-    <ion-title>artist</ion-title>
-  </ion-toolbar>
-</ion-header> -->
-
 <ion-content>
   <div id="alto" class="slider">
     <ion-slides
@@ -13,6 +7,26 @@
       [options]="slideOpts"
     >
       <ion-slide *ngFor="let item of sliderArtist" class="sliderHijo">
+        <a
+          *ngIf="item.link !== null && item.link !== '' && item.link !== ' ' && item.link !== undefined"
+          href="{{ item.link }}"
+          class="link"
+        >
+          <ion-fab vertical="top" horizontal="start" slot="fixed">
+            <ion-fab-button color="dark">
+              <ion-icon
+                *ngIf="item.linkTipo !== web"
+                name="logo-{{ item.linkTipo }}"
+                class="icon-link"
+              ></ion-icon>
+              <ion-icon
+                *ngIf="item.linkTipo === web"
+                name="globe-outline"
+                class="icon-link"
+              ></ion-icon>
+            </ion-fab-button>
+          </ion-fab>
+        </a>
         <app-preload
           [url]="item.imagen.url"
           [alt]="item.imagen.name"
@@ -189,7 +203,11 @@
 
   <div *ngIf="this.artistSvc.noData" class="empty">
     <i class="fi fi-rr-sad icon_empty"></i>
-    <div class="text_empty" *ngIf="dep !== null">No hay artistas en {{ dep }}</div>
-    <div class="text_empty" *ngIf="dist !== null">No hay artistas en {{ depDist }}</div>
+    <div class="text_empty" *ngIf="dep !== null">
+      No hay artistas en {{ dep }}
+    </div>
+    <div class="text_empty" *ngIf="dist !== null">
+      No hay artistas en {{ depDist }}
+    </div>
   </div>
 </ion-content>
