--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -7,6 +7,26 @@
       [options]="slideOpts"
     >
       <ion-slide *ngFor="let item of sliderSleep" class="sliderHijo">
+        <a
+          *ngIf="item.link !== null && item.link !== '' && item.link !== ' ' && item.link !== undefined"
+          href="{{ item.link }}"
+          class="link"
+        >
+          <ion-fab vertical="top" horizontal="start" slot="fixed">
+            <ion-fab-button color="dark">
+              <ion-icon
+                *ngIf="item.linkTipo !== web"
+                name="logo-{{ item.linkTipo }}"
+                class="icon-link"
+              ></ion-icon>
+              <ion-icon
+                *ngIf="item.linkTipo === web"
+                name="globe-outline"
+                class="icon-link"
+              ></ion-icon>
+            </ion-fab-button>
+          </ion-fab>
+        </a>
         <app-preload
           [url]="item.imagen.url"
           [alt]="item.imagen.name"
@@ -77,12 +97,12 @@
           <div class="padre">
             <div class="imagen">
               <ion-avatar item-start>
-                  <app-preload-list
-                    [url]="item.imagen.url"
-                    [alt]="item.nombre"
-                    [clase]="preloadClase"
-                    [urlPreload]="preloadImage_list"
-                  ></app-preload-list>
+                <app-preload-list
+                  [url]="item.imagen.url"
+                  [alt]="item.nombre"
+                  [clase]="preloadClase"
+                  [urlPreload]="preloadImage_list"
+                ></app-preload-list>
               </ion-avatar>
               <small id="eat-info">{{item.distancia | formatDistancia}}</small>
             </div>
