--- a/src/app/pages/place-selected/place-selected.page.html
+++ b/src/app/pages/place-selected/place-selected.page.html
@@ -38,6 +38,7 @@
         [url]="place.imagenPrincipal.url"
         [alt]="place.nombre"
         [urlPreload]="preloadImage"
+        [clase]="preloadClass"
       ></app-preload-details>
     </div>
     <div class="divb">
