--- a/src/app/components/preload-details/preload-details.component.scss
+++ b/src/app/components/preload-details/preload-details.component.scss
@@ -6,3 +6,9 @@ div {
 .img-principal {
     border-radius: 5px 5px 0 0;
 }
+
+.img-interes {
+    border-radius: 3px;
+    width: 100%;
+    margin: 3px 0;
+  }
