--- a/src/global.scss
+++ b/src/global.scss
@@ -95,3 +95,7 @@
 .diva {
   min-height: calc((100vw - (100vw * 0.06)) /1.33);
 }
+
+.divb {
+  min-height: calc(((100vw - (100vw * 0.06)) /1.33) / 3);
+}
