--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -209,7 +209,7 @@
           item['ubicacion'].lng, 
           item.fechaFin, 
           item.instagram, 
-          item.ticktAntel, 
+          item.tickAntel, 
           item.facebook, 
           item.whatsapp, 
           item.moneda, 
