--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -81,10 +81,10 @@ ion-label {
 
 .slider {
   width: 100%;
-  position: -webkit-sticky; // required for Safari
-  position: sticky;
-  top: 0; // required as well.
-  z-index: 50;
+  // position: -webkit-sticky; // required for Safari
+  // position: sticky;
+  // top: 0; // required as well.
+  // z-index: 50;
 }
 
 .distancia {
