pagina casa dominga, wpp e ig comer y dormir

--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -100,9 +100,9 @@
           ¿dónde <br />
           dormir?
         </div>
-        <div class="div__menu-der" id="filter_null" (click)="presentAlert()">
-          Casa<br />
-          Dominga
+        <div id="home-menu" class="div__menu-der" routerLink="/dominga">
+          Casa <br />
+         Dominga
         </div>
       </div>
     </div>
