--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -20,7 +20,7 @@
                 class="icon-link"
               ></ion-icon>
               <ion-icon
-                *ngIf="item.linkTipo === 'web'"
+                *ngIf="item.linkTipo === 'web'  "
                 name="globe-outline"
                 class="icon-link"
               ></ion-icon>
@@ -113,8 +113,18 @@
                     <span id="eat-info">Tel: </span>{{ tel.numero }}
                   </p>
                 </div>
-                <ion-icon class="contact" name="logo-instagram"></ion-icon>
-                <ion-icon class="contact" name="logo-whatsapp"></ion-icon>
+                <ion-icon
+                  class="contact"
+                  *ngIf="item.instagram !== null"
+                  name="logo-instagram"
+                  (click)="openInstagram(item.instagram)"
+                ></ion-icon>
+                <ion-icon
+                  class="contact"
+                  *ngIf="item.whatsapp !== null"
+                  name="logo-whatsapp"
+                  (click)="openWhatsapp(item.whatsapp)"
+                ></ion-icon>
               </ion-label>
             </div>
           </div>
