--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -23,12 +23,6 @@ ion-item {
   margin-top: 4%;
 }
 
-ion-icon {
-  font-size: 1.5rem;
-  margin-left: 8%;
-  color: var(--ion-color-back);
-}
-
 ion-title {
   color: var(--ion-color-back);
   font-weight: 300;
@@ -83,6 +77,7 @@ small {
 
 .contact {
   padding: 3px 6px 0 0;
+  color: var(--ion-color-dark);
 }
 
 .info {
