ajuste texto dominga

--- a/src/app/pages/dominga/dominga.page.scss
+++ b/src/app/pages/dominga/dominga.page.scss
@@ -19,12 +19,13 @@ ion-slide {
   display: flex;
   flex-direction: column;
   min-height: 30vh;
-  max-height: 30vh;
-  padding-top: 20px;
+  overflow-y: scroll;
+  padding: 20px 8px 0 8px ;
 }
 
 .info_detalle {
   padding-top: 20px;
+  font-family: "Poppins", sans-serif;
 }
 
 .titulo {
