ajuste texto page dominga

--- a/src/app/pages/dominga/dominga.page.scss
+++ b/src/app/pages/dominga/dominga.page.scss
@@ -19,13 +19,13 @@ ion-slide {
   display: flex;
   flex-direction: column;
   min-height: 30vh;
-  overflow-y: scroll;
   padding: 20px 8px 0 8px ;
 }
 
 .info_detalle {
-  padding-top: 20px;
+  padding: 20px 8px 0 8px ;
   font-family: "Poppins", sans-serif;
+  overflow-y: scroll;
 }
 
 .titulo {
